<resources>
    <string name="app_name">乐互网</string>
    <string name="delete">删除</string>
    <string name="check_all">全选</string>
    <string name="cancel">取消</string>
    <string name="more">更多</string>
    <string name="confirm">确定</string>
    <string name="confirm_1">确认</string>
    <string name="send">发送</string>
    <string name="submit">提交</string>
    <string name="edit">编辑</string>
    <string name="search">搜索</string>
    <string name="empty">清空</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉可以加载更多</string>
    <string name="release_to_load">松开立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="hard_loading">正在加载中</string>
    <string name="connect_net_error">网络连接失败！</string>
    <string name="exit_app">再按一次，退出程序！</string>
    <string name="mobile">手机号</string>
    <string name="mobile1">手机</string>
    <string name="password">密码</string>
    <string name="hint_mobile">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="mobile_register">手机注册</string>
    <string name="signin">登录</string>
    <string name="register">注册</string>
    <string name="reset_password">重置密码</string>
    <string name="area">地区</string>
    <string name="verification">验证码</string>
    <string name="hint_verification">请输入验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="immediately_experience">立即体验</string>
    <string name="redeem_code">推广码</string>
    <string name="hint_redeem_code">请输入推广码</string>
    <string name="reserve">预订</string>
    <string name="pay">支付</string>
    <string name="discover">发现</string>
    <string name="reserve_title">乐互网</string>
    <string name="discount">折</string>
    <string name="discount1">折扣</string>
    <string name="rise">起</string>
    <string name="area_filter">区域</string>
    <string name="all">全部</string>
    <string name="call_substitute_driving">呼叫代驾</string>
    <string name="reserve_entertainment">娱\n乐\n分\n类</string>
    <string name="reserve_commercial_ktv">商务KTV</string>
    <string name="reserve_volume_sales">量贩KTV</string>
    <string name="reserve_bar">酒吧</string>
    <string name="pay_reserve_list">预订列表</string>
    <string name="pay_reserved">预订成功</string>
    <string name="pay_reserve_time">到店时间:</string>
    <string name="pay_reserve_room_category">房型:</string>
    <string name="pay_reserve_decorate_category">装修:</string>
    <string name="pay_reserve_code">预订号:</string>
    <string name="pay_reserve_price">总价:</string>
    <string name="pay_reserve_earnest">已付订金:</string>
    <string name="pay_reserve_earnest1">已付订金</string>
    <string name="consume">消费</string>
    <string name="paying_the_bill">结账</string>
    <string name="payed_the_bill">已结账</string>
    <string name="cancel_reverse">取消预订</string>
    <string name="stay_pay">待付款</string>
    <string name="canceled">已取消</string>
    <string name="consuming">正在消费</string>
    <string name="complete_statement_of_account">已结单</string>
    <string name="before">前</string>
    <string name="residue">剩余:</string>
    <string name="reserve_promptly">立即预订</string>
    <string name="look_at_details">查看详情</string>
    <string name="near">附近</string>
    <string name="hottest">最热</string>
    <string name="new_store">新店</string>
    <string name="most_discount">最惠</string>
    <string name="merchant_detail">商家详情</string>
    <string name="detail">详情</string>
    <string name="little_consume">低消</string>
    <string name="liquor">酒水参考</string>
    <string name="referral_search">推荐搜索</string>
    <string name="no_search_history">暂无搜索历史</string>
    <string name="search_history">搜索历史</string>
    <string name="hint_search">请输入搜索内容</string>
    <string name="mine">我的</string>
    <string name="nickname">昵称</string>
    <string name="message">消息</string>
    <string name="wallet">钱包</string>
    <string name="discount_coupon">优惠券</string>
    <string name="integral">积分</string>
    <string name="integral_1">积分:</string>
    <string name="order">订单</string>
    <string name="collection">收藏</string>
    <string name="referral">推荐</string>
    <string name="mine_info">我的资料</string>
    <string name="header">头像</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="location">所在地</string>
    <string name="signing">签名</string>
    <string name="please_choose">请选择</string>
    <string name="modify_success">修改成功</string>
    <string name="earnest">订金</string>
    <string name="down_payment">订金支付</string>
    <string name="down_payment_sum_1">预订费用:</string>
    <string name="pay_way">支付方式</string>
    <string name="pay_by_weixin">微信支付</string>
    <string name="pay_by_ali">支付宝支付</string>
    <string name="pay_by_balance">余额支付</string>
    <string name="pay_success">您已成功支付了</string>
    <string name="to_evaluate">去评价</string>
    <string name="to_evaluate_1">现在您可以去评价啦</string>
    <string name="write_comment">写评价</string>
    <string name="environment">环境</string>
    <string name="atmosphere">气氛</string>
    <string name="service">服务</string>
    <string name="other">其他</string>
    <string name="hint_input_comment">请输入评价</string>
    <string name="bill">账单</string>
    <string name="today_discount">今日优惠</string>
    <string name="down_payment_sum">预订费用</string>
    <string name="consume_sum">消费金额</string>
    <string name="hint_consume_sum">请输入金额</string>
    <string name="not_participation_discount_sum">不参与优惠金额</string>
    <string name="input_not_participation_discount_sum">输入不参与优惠金额</string>
    <string name="pay_sum_really">实际支付</string>
    <string name="this_time_discount">(此次共优惠</string>
    <string name="currency">元</string>
    <string name="pay_bill_currency">元)</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="mine_balance">我的余额</string>
    <string name="deal_detail">交易明细</string>
    <string name="sum">金额</string>
    <string name="sum_1">金额(¥)</string>
    <string name="recharge_sum">充值金额</string>
    <string name="recharge">充值</string>
    <string name="recharge_way">充值方式</string>
    <string name="filter">筛选</string>
    <string name="reserve_style">风格</string>
    <string name="store_name">店名</string>
    <string name="consume_time">消费时间</string>
    <string name="hint_store_name">请输入店家名称</string>
    <string name="consume_detail">消费明细</string>
    <string name="recharge_detail">充值明细</string>
    <string name="subscription_consume">订金消费</string>
    <string name="order_consume">订单消费</string>
    <string name="discount_sum">优惠金额</string>
    <string name="total">总计</string>
    <string name="recharge_way_ali">支付宝支付充值</string>
    <string name="recharge_way_weixin">微信支付充值</string>
    <string name="use_deadline">使用时间：</string>
    <string name="arrive_with_cash">(可抵现金)</string>
    <string name="rmb">RMB</string>
    <string name="where_to_play_discount_coupon">去哪儿优惠券</string>
    <string name="currency_char">¥</string>
    <string name="integral_detail">积分明细</string>
    <string name="get_integral_way">消费获取积分</string>
    <string name="where_to_play_recreation_terrace">乐互网娱乐平台</string>
    <string name="mine_invitation_code">我的专属邀请码</string>
    <string name="invitation_code_explain">填写邀请码成为我们的VIP吃喝玩乐，\n乐互网返还给你</string>
    <string name="sheared">分享</string>
    <string name="settings">设置</string>
    <string name="set_pay_pwd">设置支付密码</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="system_notify">系统通知</string>
    <string name="check_to_update">检查更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_us">关于我们</string>
    <string name="sign_out">退出登录</string>
    <string name="hint_set_pay_pwd_1">请输入支付密码</string>
    <string name="hint_set_pay_pwd_2">请再输入一次</string>
    <string name="next">下一步</string>
    <string name="hint_advice_title">请填写意见主题</string>
    <string name="hint_leave_words">欢迎您填写留言...</string>
    <string name="expect_your_advice">我们期待您的留言，您的意见，是我们不断前进的动力，感谢支持！</string>
    <string name="current_version">当前版本</string>
    <string name="name">姓名</string>
    <string name="reserve_time">预订时间</string>
    <string name="arrive_time">到店时间</string>
    <string name="please_choose_arrive_time">请选择到店时间</string>
    <string name="waiter">服务员</string>
    <string name="prepay_reserve">预付预订</string>
    <string name="credit_reserve">信用预订</string>
    <string name="reserve_online">在线预订</string>
    <string name="tel_reserve">电话预订</string>
    <string name="carport">车位</string>
    <string name="number_of_people">人数</string>
    <string name="remark">备注</string>
    <string name="not_have_remark">暂无备注</string>
    <string name="submit_reserve_info">提交预订信息</string>
    <string name="hint_name">请输入姓名</string>
    <string name="hint_carport">请输入车数</string>
    <string name="hint_number_of_people">请输入人数</string>
    <string name="hint_input">请输入</string>
    <string name="cellphone">手机</string>
    <string name="room_category">房型</string>
    <string name="choose_room_category">选择房型</string>
    <string name="please_choose_room_category">选择房型</string>
    <string name="drinks">酒水</string>
    <string name="action">活动</string>
    <string name="pay_down_payment">支付订金</string>
    <string name="check_explain">查看说明:</string>
    <string name="welcom_come_where_to_play">欢迎您来到乐互网，感谢用户们的多多支持，在这里，给广大用户做一下解释和说明；</string>
    <string name="alter_city">城市选择</string>
    <string name="hint_alter_city">请输入城市名或首字母</string>
    <string name="current_city">当前城市</string>
    <string name="hot_city">热门城市</string>
    <string name="search_city_error">搜索无结果</string>
    <string name="city">城市</string>
    <string name="message_detail">消息详情</string>
    <string name="tips">提示</string>
    <string name="tips_1">提示：</string>
    <string name="input_pay_password">输入支付密码:</string>
    <string name="modify_head_photo">更换头像</string>
    <string name="take_photo">拍照</string>
    <string name="gallery">从相册中选取</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="please_choose_province_and_city">请选择省市</string>
    <string name="check_comment">评价查看</string>
    <string name="check_comment_1">查看评价</string>
    <string name="please_choose_room_type">请选择房型</string>
    <string name="discount_price">优惠价</string>
    <string name="reserve_date_rang">*暂时只提供一周的预订服务</string>
    <string name="choose_date">日期选择</string>
    <string name="month">月</string>
    <string name="category">类型</string>
    <string name="acoustics">音响</string>
    <string name="can_reserve">可订</string>
    <string name="drinks_name">酒水名称</string>
    <string name="drinks_price">酒水价格</string>
    <string name="order_to_complete">预订进行中...</string>
    <string name="link_merchant">我们正在马不停蹄联系商家，请您稍等哦...</string>
    <string name="reserving">预订中</string>
    <string name="reserve_submit">预订已提交</string>
    <string name="buy">买单</string>
</resources>