<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="doClick"
            type="com.fanc.wheretoplay.fragment.RegisterFragment"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg">

        <com.fanc.wheretoplay.view.TopMenu
            android:id="@+id/tm_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RelativeLayout
            android:id="@+id/rl_register_user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@drawable/shape_signin_user_input"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tm_register">

            <TextView
                android:id="@+id/tv_register_area"
                android:layout_width="@dimen/width_80"
                android:layout_height="@dimen/height_40"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_15"
                android:text="@string/area"
                android:textColor="@color/text_and_buttor_orange"
                android:textSize="@dimen/normal_textsize"/>

            <TextView
                android:id="@+id/tv_register_city"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_40"
                android:layout_alignBottom="@+id/tv_register_area"
                android:layout_toRightOf="@+id/tv_register_area"
                android:drawablePadding="@dimen/padding_5"
                android:drawableRight="@drawable/pull_down"
                android:gravity="center"
                android:onClick="@{doClick.onClick}"
                android:text="@string/city"
                android:textColor="@color/text_and_buttor_orange"
                android:textSize="@dimen/normal_textsize"/>

            <TextView
                android:id="@+id/tv_register_mobile"
                android:layout_width="@dimen/width_80"
                android:layout_height="@dimen/height_40"
                android:layout_below="@+id/tv_register_area"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_15"
                android:text="@string/mobile"
                android:textColor="@color/text_and_buttor_orange"
                android:textSize="@dimen/normal_textsize"/>

            <EditText
                android:id="@+id/et_register_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40"
                android:layout_alignBottom="@+id/tv_register_mobile"
                android:layout_toRightOf="@+id/tv_register_mobile"
                android:background="@null"
                android:hint="@string/hint_mobile"
                android:inputType="numberDecimal"
                android:maxLength="11"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/normal_textsize"/>

            <TextView
                android:id="@+id/tv_register_password"
                android:layout_width="@dimen/width_80"
                android:layout_height="@dimen/height_40"
                android:layout_below="@+id/tv_register_mobile"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_15"
                android:text="@string/password"
                android:textColor="@color/text_and_buttor_orange"
                android:textSize="@dimen/normal_textsize"/>

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40"
                android:layout_alignBottom="@+id/tv_register_password"
                android:layout_toRightOf="@+id/tv_register_password"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/normal_textsize"/>

            <TextView
                android:id="@+id/tv_register_verification"
                android:layout_width="@dimen/width_80"
                android:layout_height="@dimen/height_40"
                android:layout_below="@+id/tv_register_password"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_15"
                android:text="@string/verification"
                android:textColor="@color/text_and_buttor_orange"
                android:textSize="@dimen/normal_textsize"/>

            <EditText
                android:id="@+id/et_register_verification"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40"
                android:layout_alignBottom="@+id/tv_register_verification"
                android:layout_toLeftOf="@+id/btn_register_verification"
                android:layout_toRightOf="@+id/tv_register_verification"
                android:background="@null"
                android:hint="@string/hint_verification"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/normal_textsize"/>

            <Button
                android:id="@+id/btn_register_verification"
                android:layout_width="@dimen/width_100"
                android:layout_height="@dimen/height_30"
                android:layout_alignBottom="@+id/tv_register_verification"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@drawable/shape_btn_verification"
                android:onClick="@{doClick.onClick}"
                android:text="@string/get_verification"
                android:textColor="@color/text_black"
                android:textSize="@dimen/normal_textsize"/>

            <TextView
                android:id="@+id/tv_redeem_code"
                android:layout_width="@dimen/width_80"
                android:layout_height="@dimen/height_40"
                android:layout_below="@+id/tv_register_verification"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_15"
                android:text="@string/redeem_code"
                android:textColor="@color/text_and_buttor_orange"
                android:textSize="@dimen/normal_textsize"/>

            <EditText
                android:id="@+id/et_redeem_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40"
                android:layout_alignBottom="@+id/tv_redeem_code"
                android:layout_toRightOf="@+id/tv_redeem_code"
                android:background="@null"
                android:hint="@string/hint_redeem_code"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/normal_textsize"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height_1px"
                android:layout_below="@+id/tv_register_area"
                android:background="@color/signin_line_divider"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height_1px"
                android:layout_below="@+id/tv_register_mobile"
                android:background="@color/signin_line_divider"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height_1px"
                android:layout_below="@+id/tv_register_password"
                android:background="@color/signin_line_divider"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height_1px"
                android:layout_below="@+id/tv_register_verification"
                android:background="@color/signin_line_divider"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_40"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@drawable/shape_btn_signin"
            android:onClick="@{doClick.onClick}"
            android:text="@string/register"
            android:textColor="@color/text_black"
            android:textSize="@dimen/textsize_level2"
            app:layout_constraintEnd_toEndOf="@+id/rl_register_user_input"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/rl_register_user_input"
            app:layout_constraintTop_toBottomOf="@+id/rl_register_user_input"/>

    </android.support.constraint.ConstraintLayout>
</layout>
